<resources>
    <string name="app_name">Green Mario</string>
    <string name="app_title">GreenMario</string>
    <string name="tag_line">You don\'t have a choice</string>
    <string name="app_description">Green Mario is the best Mario. Better even than:</string>
    <string name="red_mario">Red Mario</string>
    <string name="yellow_mario">Yellow Mario</string>
    <string name="purple_mario">Purple Mario</string>
    <string name="create_account">Create a green account</string>
    <string name="dollar_sign">Dollar sign</string>

    <string name="email_address">Email address</string>
    <string name="create_password">Create Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="see_below">See criteria below</string>
    <string name="password_criteria">Your password should have a minimum of 8 characters and contain at least one number, one uppercase and one lower case letter. You can use special characters.</string>
    <string name="next">Next</string>
    <string name="title_activity_create_account">Create Account</string>

    <string name="enter_account_details">Enter account details</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="change_photo">Change Photo</string>
    <string name="age">Age</string>
    <string name="choose_birth_date">Choose Birth Date</string>
    <string name="gender">Gender</string>
    <string name="female">F</string>
    <string name="male">M</string>
    <string name="nonbinary">X</string>
    <string name="not_specified">N/A</string>
    <string name="address_hint">Postal Address (Opt)</string>
    <string name="country">Country</string>
    <string name="save">Save</string>
    <string name="profile_picture">Profile picture</string>

    <string name="welcome_back">Welcome back, </string>
    <string name="exclamation_mark">!</string>
</resources>
