<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterDetailsActivity"
    android:background="@color/darkBackground">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/green_mario" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_name_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightBackground"
            android:ems="10"
            android:hint="@string/name"
            android:autofillHints="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_username_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/lightBackground"
            android:ems="10"
            android:hint="@string/username"
            android:autofillHints="@string/username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_password_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/lightBackground"
            android:ems="10"
            android:hint="@string/password"
            android:autofillHints="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_change_photo_details"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/gradient_button_background"
            android:text="@string/change_photo" />

        <EditText
            android:id="@+id/et_age_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/lightBackground"
            android:hint="@string/age"
            android:autofillHints="@string/age"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_birth_date_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/lightBackground"
            android:ems="10"
            android:hint="@string/choose_birth_date"
            android:inputType="date" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:layout_marginTop="16dp"
            android:textColor="@color/lightText" />

        <RadioGroup
            android:id="@+id/rg_gender_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/rb_not_specified_details"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_female_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/lightText" />

            <RadioButton
                android:id="@+id/rb_male_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="@color/lightText" />

            <RadioButton
                android:id="@+id/rb_nonbinary_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nonbinary"
                android:textColor="@color/lightText" />

            <RadioButton
                android:id="@+id/rb_not_specified_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_specified"
                android:textColor="@color/lightText" />
        </RadioGroup>

        <EditText
            android:id="@+id/et_address_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/darkText"
            android:layout_marginTop="16dp"
            android:hint="@string/address_hint"
            android:background="@color/lightBackground"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_save_details"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/gradient_button_background"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout" />
</android.support.constraint.ConstraintLayout>