<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingActivity"
    android:background="@color/darkBackground">

    <ImageView
        android:id="@+id/iv_icon_landing"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/green_mario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_title_landing"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_landing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_title"
        android:textColor="@color/lightText"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/iv_icon_landing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_icon_landing" />

    <TextView
        android:id="@+id/tv_tagline_landing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/tag_line"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_title_landing"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_landing" />

    <TextView
        android:id="@+id/tv_description_landing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="8dp"
        android:text="@string/app_description"
        android:textColor="@color/lightText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_bullet_a_landing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/dollar_sign"
        android:src="@drawable/tick"
        app:layout_constraintStart_toStartOf="@+id/tv_description_landing"
        app:layout_constraintTop_toBottomOf="@+id/tv_description_landing" />

    <ImageView
        android:id="@+id/iv_bullet_b_landing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/dollar_sign"
        android:src="@drawable/tick"
        app:layout_constraintStart_toStartOf="@+id/tv_description_landing"
        app:layout_constraintTop_toBottomOf="@+id/iv_bullet_a_landing" />

    <ImageView
        android:id="@+id/iv_bullet_c_landing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/dollar_sign"
        android:src="@drawable/tick"
        app:layout_constraintStart_toStartOf="@+id/tv_description_landing"
        app:layout_constraintTop_toBottomOf="@+id/iv_bullet_b_landing" />

    <TextView
        android:id="@+id/tv_example_a_landing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/red_mario"
        android:textColor="@color/lightText"
        app:layout_constraintBottom_toBottomOf="@+id/iv_bullet_a_landing"
        app:layout_constraintStart_toEndOf="@+id/iv_bullet_a_landing"
        app:layout_constraintTop_toTopOf="@+id/iv_bullet_a_landing" />

    <TextView
        android:id="@+id/tv_example_b_landing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/yellow_mario"
        android:textColor="@color/lightText"
        app:layout_constraintBottom_toBottomOf="@+id/iv_bullet_b_landing"
        app:layout_constraintStart_toEndOf="@+id/iv_bullet_b_landing"
        app:layout_constraintTop_toTopOf="@+id/iv_bullet_b_landing" />

    <TextView
        android:id="@+id/tv_example_c_landing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/purple_mario"
        android:textColor="@color/lightText"
        app:layout_constraintBottom_toBottomOf="@+id/iv_bullet_c_landing"
        app:layout_constraintStart_toEndOf="@+id/iv_bullet_a_landing"
        app:layout_constraintTop_toTopOf="@+id/iv_bullet_c_landing" />

    <Button
        android:id="@+id/btn_create_account_landing"
        android:layout_width="0dp"
        android:layout_height="69dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"

        android:layout_marginBottom="32dp"
        android:background="@drawable/gradient_button_background"
        android:text="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>