<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/darkBackground">

    <ImageView
        android:id="@+id/iv_picture_r_item"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/green_mario" />

    <TextView
        android:id="@+id/tv_username_r_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/username"
        android:textColor="@color/lightText"
        app:layout_constraintBottom_toTopOf="@+id/tv_address_r_item"
        app:layout_constraintEnd_toStartOf="@+id/tv_gender_r_item"
        app:layout_constraintStart_toEndOf="@+id/iv_picture_r_item"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_address_r_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/address_hint"
        android:textColor="@color/lightText"
        app:layout_constraintBottom_toTopOf="@+id/tv_country_r_item"
        app:layout_constraintEnd_toEndOf="@+id/tv_username_r_item"
        app:layout_constraintStart_toEndOf="@+id/iv_picture_r_item"
        app:layout_constraintTop_toBottomOf="@+id/tv_username_r_item" />

    <TextView
        android:id="@+id/tv_country_r_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/country"
        android:textColor="@color/lightText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_address_r_item"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_picture_r_item"
        app:layout_constraintTop_toBottomOf="@+id/tv_address_r_item" />

    <TextView
        android:id="@+id/tv_gender_r_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/gender"
        android:textColor="@color/lightText"
        app:layout_constraintBottom_toBottomOf="@+id/tv_username_r_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_username_r_item"
        app:layout_constraintTop_toTopOf="@+id/tv_username_r_item" />

    <TextView
        android:id="@+id/tv_birth_date_r_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/choose_birth_date"
        android:textColor="@color/lightText"
        app:layout_constraintBottom_toBottomOf="@+id/tv_address_r_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_address_r_item"
        app:layout_constraintTop_toTopOf="@+id/tv_address_r_item" />
</android.support.constraint.ConstraintLayout>